kubernetes/core/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    # Use Tailscale Ingress
    tailscale.com/hostname: "longhorn"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - "longhorn"
  rules:
    -  http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
